tests/ui/null_needs_type.stderr
Error [E0308]: bare `null` needs a known optional type here
  --> tests/ui/null_needs_type.lex:2:13
    |
  2 |     val x = null;
    |             ^^^^
 Why: `null` only fits where a `T?` is expected (S32)
 Fix: add a type annotation, or use `null` where the type is already known
