tests/ui/null_needs_type.lex
fn main() {
    val x = null;
    print(x);
}
